--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Bubunyo Nyavor",
   "license": "MIT",
   "scripts": {
-    "start": "yarn run compile && node dist/app.js",
+    "start": "yarn run compile && node dist/server.js",
     "predev": "rimraf ./dist/",
     "dev": "cross-env NODE_ENV='development' nodemon --watch src --exec yarn start",
     "test": "cross-env NODE_ENV='test' jest -i",
@@ -15,11 +15,7 @@
     "compile": "babel --out-dir dist src --source-maps --ignore '**/*.test.js'",
     "prepublish": "yarn run compile",
     "postinstall": "yarn run compile",
-    "lint": "eslint src",
-    "migrate:generate": "yarn run sequelize migration:generate --name",
-    "sequelize-test": "cross-env NODE_ENV='test' node_modules/.bin/sequelize",
-    "sequelize-dev": "cross-env NODE_ENV='development' node_modules/.bin/sequelize",
-    "sequelize": "node_modules/.bin/sequelize"
+    "lint": "eslint src"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -58,6 +54,9 @@
     "supertest": "^3.0.0"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+     "watchPathIgnorePatterns": [
+      "json"
+     ]
   }
 }
