--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "predev": "rimraf ./dist/",
     "dev": "cross-env NODE_ENV='development' nodemon --watch src --exec yarn start",
     "test": "cross-env NODE_ENV='test' jest -i",
-    "test:coverage": "cross-env NODE_ENV='test' jest --no-cache --watch --coverage",
+    "test:watch": "cross-env NODE_ENV='test' jest --no-cache --watch --coverage",
+    "test:coverage": "cross-env NODE_ENV='test' jest --no-cache --coverage",
     "compile": "babel --out-dir dist src --source-maps --ignore '**/*.test.js'",
     "prepublish": "yarn run compile",
     "postinstall": "yarn run compile",
